--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 axum = "0.7.5"
+futures = "0.3.30"
 http = "1.1.0"
 pin-project = "1.1.5"
 tokio = { version = "1.37.0", features = ["full"] }
