--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ pin-project = "1.1.5"
 redis = { version = "0.25.3", features = ["tokio-comp","aio", "connection-manager"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tower = "0.4.13"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
